# volume-stark

./: .gitignore  Cargo.toml  README.md  proof.json
config/: config.json
src/: all_stark.rs  block_header.rs  bloom_stark.rs  bn_config.rs  circom_verifier.rs  configbn.rs  configbn2.rs  cross_table_lookup.rs  fixed_recursive_verifier.rs  get_challenges.rs  lib.rs  lookup.rs  patricia_merkle_trie.rs  permutation.rs  poseidon_bn128.rs  poseidon_bn128_constants.rs  proof.rs  prover.rs  recursive_verifier.rs  stark_testing.rs  utilsbn.rs  verifier.rs
src/arithmetic/: addcy.rs  arithmetic_stark.rs  columns.rs  mod.rs  mul.rs  utils.rs
src/bn128/: config.rs  mod.rs  poseidon_bn128.rs  poseidon_bn128_constants.rs
src/circom/test/data/: conf.json  proof.json
src/data/: columns.rs  data_stark.rs  mod.rs
src/generation/: mod.rs
src/keccak_sponge/: keccak_sponge_stark.rs  keccak_util.rs  mod.rs
src/search_substring/: mod.rs  search_stark.rs
src/summation/: mod.rs  sum_stark.rs
src/witness/: mod.rs  state.rs  traces.rs  util.rs
test_data/headers/: block_headers_12901300-12901399.json  block_headers_12901400-12901596.json  block_headers_17488717-17488717.json  block_headers_17488718-17488718.json  blockheaders_1.json  blockheaders_2.json
test_data/paths/: paths_1.json  paths_12901300-12901399.json  paths_12901400-12901596.json  paths_2.json
tests/integration/: simple_transfer.rs
