[package]
name = "maru_volume_stark"
description = "STARK to prove LP 3Pool Curve transactions volume"
version = "0.2.0"
authors = ["Denis Kanonik <denis@proxima.one>", "Stanislav Karashchuk <stanislav@proxima.one>"]
readme = "README.md"
repository = "https://github.com/proxima-one/volume-stark"
keywords = ["STARK", "Ethereum", "Curve"]
categories = ["cryptography"]
edition = "2021"

[dependencies]
regex="1.9.0"
anyhow = "1.0.40"
env_logger = "0.10.0"
eth_trie_utils = "0.6.0"
ethereum-types = "0.14.0"
hex = { version = "0.4.3"}
#hex-literal = "0.4.1"
itertools = "0.10.0"
keccak-hash = "0.10.0"
log = "0.4.14"
# plonky2_maybe_rayon = "0.1.1"
num = "0.4.0"
num-bigint = "0.4.3"
once_cell = "1.13.0"
pest = "2.1.3"
pest_derive = "2.1.0"
# plonky2 = { version = "0.1.4", default-features = false, features = ["timing"] }
# plonky2_util = { version = "0.1.1" }
rand = "0.8.5"
rand_chacha = "0.3.1"
rlp = "0.5.1"
rlp-derive = "0.1.0"
serde = { version = "1.0.144", features = ["derive"] }
static_assertions = "1.1.0"
hashbrown = { version = "0.14.0" }
tiny-keccak = "2.0.2"
serde_json = "1.0"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
bytes = "1"
base64 = "0.21.4"
url = "2.2"
futures-util = "0.3.28"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

poseidon-permutation = { path = "../poseidon-permutation-rs"}
plonky2 = { path = "../plonky2-f3f3641fb5fad15795b9bd2cc57870f1b6b20b69/plonky2"}
plonky2_util = { path = "../plonky2-f3f3641fb5fad15795b9bd2cc57870f1b6b20b69/util"}
maybe_rayon = { path = "../plonky2-f3f3641fb5fad15795b9bd2cc57870f1b6b20b69/maybe_rayon"}

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
ripemd = "0.1.3"
sha2 = "0.10.6"

[features]
default = ["parallel"]
#asmtools = ["hex"]
parallel = ["plonky2/parallel", "maybe_rayon/parallel"]

[[bin]]
name = "assemble"
required-features = ["asmtools"]


[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[profile.release]
lto = "off"

[[bin]]
name = "generate_recursive_circuit"

[[bin]]
name = "prove_anchor_recursive"

[[bin]]
name = "prove_link_recursive"

[[bin]]
name = "prove_agg_recursive"

[[bin]]
name = "verify_recursive"

[[bin]]
name = "verify_agg"

[[bin]]
name = "final_proof_wrapper"

[[bin]]
name = "prove_recursive"

[[bin]]
name = "run_proof_server"

[[bin]]
name = "test_run_proof_server"


